# openagent-terminal

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  Makefile  README.md
.builds/: freebsd.yml  linux.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: ai.md  escape_support.md  features.md  sync.md
extra/: openagent-terminal.info
extra/completions/: _openagent-terminal  openagent-terminal.bash  openagent-terminal.fish
extra/linux/: OpenAgentTerminal.desktop  org.openagent.OpenAgentTerminal.appdata.xml
extra/man/: openagent-terminal-bindings.5.scd  openagent-terminal-msg.1.scd  openagent-terminal.1.scd  openagent-terminal.5.scd
openagent-terminal/: Cargo.toml
openagent-terminal-ai/: Cargo.toml
openagent-terminal-ai/src/: lib.rs
openagent-terminal-config/: Cargo.toml
openagent-terminal-config-derive/: Cargo.toml
openagent-terminal-config-derive/src/: lib.rs  serde_replace.rs
openagent-terminal-config-derive/src/config_deserialize/: de_enum.rs  de_struct.rs
openagent-terminal-config-derive/tests/: config.rs
openagent-terminal-config/src/: lib.rs
openagent-terminal-core/: CHANGELOG.md  Cargo.toml
openagent-terminal-core/src/: event.rs  event_loop.rs  lib.rs
openagent-terminal-core/src/grid/: resize.rs
openagent-terminal-core/src/term/: mod.rs
openagent-terminal-core/src/tty/: mod.rs  unix.rs
openagent-terminal-core/tests/: ref.rs
openagent-terminal-sync/: Cargo.toml
openagent-terminal-sync/src/: lib.rs  local_fs.rs
openagent-terminal/src/: ai_runtime.rs  cli.rs  clipboard.rs  event.rs  ipc.rs  logging.rs  main.rs  message_bar.rs  panic.rs  window_context.rs
openagent-terminal/src/config/: ai.rs  bell.rs  bindings.rs  color.rs  cursor.rs  debug.rs  (+11 more)
openagent-terminal/windows/: openagent-terminal.rc
scripts/: README.md  create-flamegraph.sh
shell-integration/: INSTALL.md  PHASE3_SUMMARY.md  README.md
shell-integration/bash/: openagent_integration.bash
shell-integration/fish/: openagent_integration.fish
shell-integration/universal/: auto_setup.sh  detect_shell.sh
shell-integration/zsh/: openagent.plugin.zsh  openagent_integration.zsh
(+22 files in other folders)
