[workspace]
members = [
    "openagent-terminal",
    "openagent-terminal-core",
    "openagent-terminal-config",
    "openagent-terminal-config-derive",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85.0"

[profile.release]
lto = "thin"
debug = 1
incremental = false

[workspace.dependencies]
toml = "0.9.2"
toml_edit = "0.23.1"
