[package]
name = "openagent-terminal-config"
version = "0.2.3-dev"
authors = ["Christian Duerr <contact@christianduerr.com>"]
license = "MIT OR Apache-2.0"
description = "Alacritty configuration abstractions"
homepage = "https://alacritty.org"
repository = "https://github.com/GeneticxCln/openagent-terminal"
edition.workspace = true
rust-version.workspace = true

[dependencies]
log = { version = "0.4.17", features = ["serde"] }
serde = "1.0.163"
toml.workspace = true

[dev-dependencies]
openagent-terminal-config-derive = { version = "0.2.5-dev", path = "../openagent-terminal-config-derive" }
serde = { version = "1.0.163", features = ["derive"] }
